fixed overflow task in dark mode

--- a/styles/style.css
+++ b/styles/style.css
@@ -215,14 +215,12 @@ ion-icon {
 .tasks__list {
 	display: flex;
 	flex-direction: column;
-	/* width: 100%; */
 	list-style: none;
 	margin-left: -5px;
 	margin-right: -5px;
 }
 
 .tasks__item {
-	display: flex;
 	width: 100%;
 	display: flex;
 	padding: 5px;
